Fix double virtualization anti-pattern: Use real S3 (Localstack) for integration tests
- Address criticism about testing FakeS3Service with WireMock S3 stubs
- Separate concerns: FakeS3Service for fast controller tests, LocalstackS3Service for real integration tests
- WireMock only for external REST APIs, not S3
- Add LocalstackS3Service for real S3 integration testing
- Update documentation to explain layer-appropriate testing strategy
- Eliminate fake->fake testing that provides no validation value